--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
-:root{
-    --brand-color: #EF5F4C; 
-    --background-color: #FFFFFF;
-    --surface-color: #F5F5F5;
-    --skeleton-color: #D9D9D9; 
-    --shape-transparency: #FFFFFF;
-    --text-color-primary: #313131;
-    --text-color-secondary: #6C6C6C;
-    
-    --text: 400 16px/1.5 var(--font-family);
-    --text-md: 500 18px/1.5 var(--font-family);
-    --text-lg: 600 24px/1.3 var(--font-family);
-    --md-text: 500 20px/1.4 var(--font-family);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: var(--font-family);
 }
 
+:root {
+    /* Produto */
+    --brancd-color: #EF5F4C;
+
+    /* Shape */
+    --background-color: #FFFFFF;
+    --surface-color: #F5F5F5;
+    --skeleton-color: #D9D9D9;
+    --shape-transparency: #FFFFFF;
+
+    /* Text */
+    --text-color-primary: #313131;
+    --text-color-secondary: #6C6C6C;
+
+    /* Tipografica */
+    --font-family: 'Poppins', sans-serif;
+    --h1: bold 32px/125% var(--font-family);
+    --paragraph-md: 14px/170% var(--font-family);
+    --paragraph-sm: 12px/170% var(--font-family);
+}
+
+.margin {
+    margin-inline: 32px;
+}
 
 
 body{
